# tilelang

./: .gitignore  setup.py
MoE_develop/: benchmark_bf16_gmm.py  gemm_splitK.py  moe_shared.py  per_token_cast_to_int8.py  swiglu.py
MoE_develop/debug_splitK/: CMakeLists.txt  debug_splitK_illegal_memory.cu  gate_MoE.py
MoE_develop/gather/: gather.py  test_gather.py
MoE_develop/persistent_group_gemm/: persistent_group_gemm.py  w8a8_persistent_group_gemm.py
MoE_develop/topk/: debug_topk.cu  scatter.py  scatter_shared.py  softmax_topk_tilelang.py  test_topk.py  topk_softmax_scatter.py  trt_moe_kernels.cu
MoE_develop/w4a8_gmm/: Qserve_A_B.py  Qserve_fast_dequant.py  Qserve_w4a8_grouped_gemm.py  dequant_grouped_gemm_w4a8.py  dequant_grouped_gemm_w4a8_B_A.py  example_dequant_gemm_w4a8.py  example_dequant_gemm_w4a8_A_B.py  liquid_w4a8_dequant_gemm.py  per_group_quant.py  qserve_kernel.cu  test_fast_dequant.py
dsa_train/: dsa_train.py
dsa_train/kernels/: __init__.py  fp8_lighting_indexer_gqa.py  sparse_gqa_bwd.py  sparse_gqa_fwd.py
examples/deepseek_v32/: fp8_lighting_indexer_gqa.py  sparse_gqa_fwd.py
examples/dequantize_gemm/: example_dequant_gemm_w4a8.py
examples/gemm/: example_gemm.py
examples/gemm_splitk/: example_tilelang_gemm_splitk.py  example_tilelang_gemm_splitk_vectorize_atomicadd.py
examples/grouped_gemm/: example_grouped_gemm_fwd.py  w8a8_grouped_gemm.py
examples/grouped_gemm/persistent_kernel/: tl_grouped_gemm_persistent.py
examples/grouped_gemm/w8a8_tma_debug/: CMakeLists.txt  bf16_tma_tilelang_grouped_Gemm_kernel.cu  debug_tilelang_tma_w8a8_grouped_gemm_source_code.cu  debug_w8a8_grouped_gemm_tma.py  profile_tilelang_grouped_gemm_tma_ep.cu
layout_learn/: fragment_operator.py
src/layout/: layout.cc  utils.cc
src/op/: parallel.cc
src/transform/: layout_inference.cc
